project is completed

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </ul>
         <hr>
         <div class="btn">
-        <button type="submit" id="submit" disabled>Submit</button>
+        <button type="submit" id="submit" >Submit</button>
     </div>
       </div>
     </div>
